docs(agent): 补充领域模型线程安全说明
- 为 AgentDefinitionDO、AgentDefinitionPostDTO、AgentDefinitionPutDTO、AgentDefinitionVO 等实体类补充线程安全注释
- 说明 AgentExecutor、ToolExecutor、ToolRegistry 等执行器及注册中心须保证线程安全和无状态设计
- 补充 ConversationMemory、EmbeddingClient、VectorStore 等组件线程安全要求和使用建议
- 对 Guardrail、PromptTemplate、TextChunk、TextChunker、TraceRecorder 等领域组件添加线程安全说明
- 调整 AsmBeanCodecGenerator ASM_FLAGS 配置，避免 ASM 9.x 相关异常，更新相关测试用例和注释
- 完善 nextwiki 模块文件服务接口注释，补充上传、创建目录、列出文件、移动、重命名、删除、复制、版本回滚等方法说明
- 优化 FilePermissionService 权限校验方法注释，详细说明权限位含义和校验机制
- 为 OcrApplicationService 识别方法添加详细注释，说明路由逻辑及异常处理
- 为 WebSocketAuthFilter 添加执行顺序注释，描述鉴权流程和标记机制